Updated resume, added React Food Finder, updated contact page, reverted index page UI

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,15 +16,15 @@ import "../styles/global.css";
             <i class="bi bi-envelope"></i>
           </div>
           <h1 class="fw-bolder">Contact Me</h1>
-          <p class="lead fw-normal text-muted mb-0">Let's work together!</p>
+          <!-- <p class="lead fw-normal text-muted mb-0">Let's work together!</p> -->
         </div>
         <div class="container">
           <div class="row gx-5 justify-content-center">
             <div class="col-lg-8 text-center">
-              <p class="mb-5">
+              <!-- <p class="mb-5">
                 I am available for contract work and full time positions.
                 <br /> When you're ready - let me know!
-              </p>
+              </p> -->
               <div class="row gx-5">
                 <div class="col-12 col-md-6 mb-3 mb-md-0" id="EmailCard">
                   <div class="card lift">
