--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,6 +13,7 @@ import MainframeClassicCardPreview from "../img/mainframe-classic/ProjectCardPre
 import EC2OptimizerCardPreview from "../img/aws-cost-optimizer/ProjectCardPreview.png";
 import AntiHeroCardPreview from "../img/anti-hero/ProjectCardPreview.png";
 import MFFCardPreview from "../img/mercer-food-finder/ProjectCardPreview.png";
+import RFFCardPreview from "../img/react-food-finder/ProjectCardPreview.png";
 import MyHousingCardPreview from "../img/my-housing/ProjectCardPreview.png";
 ---
 
@@ -50,10 +51,18 @@ import MyHousingCardPreview from "../img/my-housing/ProjectCardPreview.png";
           tagList="React, Django, Flask, Docker, Typescript, EC2, Python, PostgreSQL, Git"
           projectTitle="React Food Finder"
           description="An updated version of the <span class='text-primary'>Mercer County Free Food Finder</span> — a fully-featured web application for connecting Mercer County residents with free food resources near them. Comes equipped with a powerful Django backend and a feature rich React frontend to make management of resource data a breeze."
-          imageSrc={MFFCardPreview.src}
+          imageSrc={RFFCardPreview.src}
           ,
           linkTo="/projects/mercer-food-finder"
         />
+        <ProjectCard
+        tagList="Flask, Javascript, EC2, Python, PostgreSQL, Git"
+        projectTitle="Mercer County Free Food Finder"
+        description="A fully-featured web application for connecting Mercer County residents with free food resources near them. Comes equipped with a feature rich backend to make management of resource data a breeze. Created in partnership with the Trenton Health Team."
+        imageSrc={MFFCardPreview.src}
+        ,
+        linkTo="/projects/mercer-food-finder"
+      />
         
           <ProjectCard
             tagList="React, D3.js, Python, Typescript, Flask, PostgreSQL, Bash, Git"
