--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -91,7 +91,7 @@ import "../styles/global.css";
                       <li>Collaborate with Product Managers to understand business opportunities and requirements</li>
                       <li>Collaborate with Data Scientists to create user-friendly interfaces for science model inputs & outputs serving end-to-end solutions</li>
                       <li>Collaborate with Data Engineers to build data storage, retrieval, and archiving routines </li>
-                      <li>Propose creative user experiences through working prototypes that meet business and application requirements. </li>
+                      <li>Propose creative user experiences through working prototypes that meet business and application requirements </li>
                     </ul>
                   </div>
                 </div>
@@ -99,7 +99,7 @@ import "../styles/global.css";
             </div>
           </div>
           
-          <div class="card shadow border-0 rounded-4 mb-5">
+          <!-- <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -126,7 +126,7 @@ import "../styles/global.css";
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Advanced Programming Techniques Grader -->
           <!-- <div class="card shadow border-0 rounded-4 mb-5">
@@ -219,21 +219,21 @@ import "../styles/global.css";
                       <li>
                         Ensured that projects stayed within scope, met
                         established timelines, and remained within budget
-                        constraints.
+                        constraints
                       </li>
                       <li>
                         Served as liaison between devs and stakeholders,
                         translating feature requirements into technical action
-                        items.
+                        items
                       </li>
                       <li>
                         Proactively identified and resolved potential future
                         project issues to ensure long-term application
-                        stability.
+                        stability
                       </li>
                       <li>
                         Created and maintained project documentation, including
-                        project plans, status reports, and meeting minutes.
+                        project plans, status reports, and meeting minutes
                       </li>
                       <li>
                         Increased site traffic by over 400% by creating
@@ -253,10 +253,10 @@ import "../styles/global.css";
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                   <div class="bg-light p-4 rounded-4">
                     <div class="text-primary fw-bolder mb-2">
-                      Jan 2015 - Jul 2021
+                      Aug 2019 - Jul 2021
                     </div>
                     <div class="small fw-bolder">
-                      Full Stack Software Engineer and Computer Repair
+                      Full Stack Software Engineer / Computer Repair
                       Technician
                     </div>
                     <div class="small text-primary">BWISE</div>
@@ -326,6 +326,35 @@ import "../styles/global.css";
                         Aided cloud migration project by updating firewall rules
                         to be applied to AWS EC2 instances
                       </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card shadow border-0 rounded-4 mb-5">
+            <div class="card-body p-5">
+              <div class="row align-items-center gx-5">
+                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                  <div class="bg-light p-4 rounded-4">
+                    <div class="text-primary fw-bolder mb-2">
+                      Jan 2015 - Jun 2019
+                    </div>
+                    <div class="small fw-bolder">Information Technology Specialist</div>
+                    <div class="small text-primary">Freelance</div>
+                    <div class="small text-muted">Dallas, TX</div>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div>
+                    <ul>
+                      <li>
+                        Troubleshooted and repaired iOS, Android, macOS, and
+                        Windows computer software issues
+                      </li>
+                      <li>Setup and managed Windows Server domain controllers</li>
+                      <li>Installed and managed server features including Active Directory, IIS, DNS, and DHCP</li>
                     </ul>
                   </div>
                 </div>
