--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
               target="_blank"
               rel="noopener noreferrer">
               <div class="d-inline-block bi bi-download d-md-none"></div>
-              <span class="d-none d-md-block">Download Full Resume</span>
+              <span class="d-none d-md-block">Download Resume</span>
             </a>
           </div>
           <!-- Education Card 2-->
